[gd_scene load_steps=2 format=3 uid="uid://bsjxe558s3prf"]

[ext_resource type="Script" path="res://UI/Scripts/Credits.gd" id="1_meivw"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_meivw")

[node name="Quit" type="Button" parent="."]
offset_right = 8.0
offset_bottom = 8.0

[node name="Label" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0

[node name="Name1" type="Label" parent="."]
offset_right = 1.0
offset_bottom = 23.0

[node name="Name2" type="Label" parent="."]
offset_right = 1.0
offset_bottom = 23.0

[node name="Name3" type="Label" parent="."]
offset_right = 1.0
offset_bottom = 23.0

[node name="Name4" type="Label" parent="."]
offset_right = 1.0
offset_bottom = 23.0

[node name="Name5" type="Label" parent="."]
offset_right = 1.0
offset_bottom = 23.0
